--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = []
 
 [project.scripts]
 netscan = "netscan.cli:main"
+netscan-tui = "netscan.tui:main"
 
 [tool.setuptools]
 packages = ["netscan"]
