Add scan profiles system (Task 3.1-3.4)
- Created profiles.py with ScanProfile dataclass
- Predefined profiles: quick, normal, thorough, stealth
- Profile-specific parameters: concurrency, timeout, port ranges
- Custom profile support with YAML storage (~/.netscan/profiles/)
- CLI integration: --profile, --list-profiles, --save-profile
- TUI integration: Shift+P for profile selection dialog
- Active profile displayed in TUI header
- 22 comprehensive unit tests
- PyYAML dependency added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ classifiers = [
   "Operating System :: POSIX :: Linux",
   "Environment :: Console",
 ]
-dependencies = []
+dependencies = [
+  "pyyaml>=6.0"
+]
 
 [project.scripts]
 netscan = "netscan.cli:main"
