Clean up: Remove test files and update .gitignore
Removed:
- test_scan.html (test output)
- test_export.md (test output)
- scan_results.md (test output)
- scan_no_emoji.md (test output)
- README_OLD.md (obsolete)

Updated .gitignore:
- Exclude test/temporary files (test_*.html, test_*.md, scan_*.md)
- Exclude user cache (.netscan_cache.json)

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@ venv/
 
 # VS Code
 .vscode/
+
+# Test/temporary files
+test_*.html
+test_*.md
+scan_*.md
+*_test.csv
+*_test.md
+
+# User data (not in repo)
+.netscan_cache.json
